[workspace]
resolver = "2"

members = [
  "core", 
  "derive", 
  "tests", 
  "engine", 
  "utils/slice_search", 
  "utils/sorted_array", 
  "utils/id_allocator", 
  "utils/learned_segment",
  "utils/gapped_array",
  "bench/runner", 
]

exclude = [
  "bench/instance"
]

[profile.release]
# lto = true
