[package]
name = "limousine_core"
description = "Building blocks for hybrid index data structures."
version = "0.3.4"
edition = "2021"
authors = ["Lev Kruglyak <lev.kruglyak2014@gmail.com>"]
keywords = ["btree", "pgm", "database", "proc_macro", "limousine"]
license = "Apache-2.0"
repository = "https://github.com/LevKruglyak/limousine"

[dependencies]
num = "0.4.2"
trait-set = "0.3.0"

zstd-sys = "=2.0.9" # fix to avoid marble build issue
marble = "15.0"

generational-arena = "0.2.9"

serde = { version = "1.0.200", features = ["derive"] }
bincode = { version = "1.3.3" }

anyhow = "1.0.82"

sorted_array = { path = "../utils/sorted_array", version = "0.1.3", features = ["serde"] }
id_allocator = { path = "../utils/id_allocator", version = "0.1.0", features = ["serde"] }
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.0"

[features]
debug = []
