[package]
name = "limousine_core"
description = "Building blocks for hybrid index data structures."
version = "0.1.0"
edition = "2021"
authors = ["Lev Kruglyak <lev.kruglyak2014@gmail.com>"]
keywords = ["btree", "pgm", "database", "proc_macro", "limousine"]
license = "Apache-2.0"
repository = "https://github.com/LevKruglyak/limousine"

[dependencies]
generational-arena = "0.2.9"
num = "0.4.1"
trait-set = "0.3.0"

[features]
default = []
standard = []
