[package]
name = "limousine_core"
description = "Building blocks for hybrid index data structures."
version = "0.1.0"
edition = "2021"
authors = ["Lev Kruglyak <lev.kruglyak2014@gmail.com>"]
keywords = ["btree", "pgm", "database", "proc_macro", "limousine"]
license = "Apache-2.0"
repository = "https://github.com/LevKruglyak/limousine"

[dependencies]
generational-arena = "0.2.9"
num = "0.4.0"
trait-set = "0.3.0"
bumpalo = { version = "3.13.0", features = ["boxed"] }
egui = "0.22.0"
eframe = "0.22.0"
rand = "0.8.5"
kdam = "0.4.1"
itertools = "0.12.1"

[features]
default = []
standard = []

[[bin]]
name = "gapped-viz"
path = "src/learned/pgm/gapped_viz.rs"
