[package]
name = "limousine_core"
description = "Building blocks for hybrid index data structures."
version = "0.1.0"
edition = "2021"
authors = ["Lev Kruglyak <lev.kruglyak2014@gmail.com>"]
keywords = ["btree", "pgm", "database", "proc_macro", "limousine"]
license = "Apache-2.0"
repository = "https://github.com/LevKruglyak/limousine"

[dependencies]
num = "0.4.0"
trait-set = "0.3.0"

marble = "15.0"
generational-arena = "0.2.9"

serde = { version = "1.0.144", features = ["derive"] }
bincode = { version = "1.3.3" }
anyhow = "1.0.79"
caches = "0.2.8"
smallvec = { version = "1.13.2", features = ["const_generics"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
standard = []
