[package]
name = "limousine_engine"
version = "0.1.1"
edition = "2021"
description = "limousine_engine can reason about a large design continuum of hybrid index designs and materialize an optimal implementation using procedural macros."
authors = ["Lev Kruglyak <lev.kruglyak2014@gmail.com>"]
keywords = ["btree", "pgm", "database", "proc_macro", "limousine"]
license = "Apache-2.0"
repository = "https://github.com/LevKruglyak/limousine"

[dependencies]
limousine_derive = { version = "0.1.0" }
limousine_core = { version = "0.1.0", optional = true }

[features]
default = ["dep:limousine_core"]
standard = ["limousine_core?/standard"]
