[package]
name = "limousine_example"
version = "0.1.0"
edition = "2021"

[dependencies]
average = "0.14.1"
itertools = "0.11.0"
rand = "0.8.5"
rand_distr = "0.4.3"
sys-info = "0.9.1"

limousine_core = { path = "../limousine_core" }
limousine_engine = { path = "../limousine_engine" }
sled = "0.34.7"
tempdir = "0.3.7"
tempfile = "3.10.1"
