[package]
name = "limousine_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"], optional = true }
humantime = "2.1.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"

strum = { version = "0.26.2", optional = true }
strum_macros = { version = "0.26.2", optional = true }

[features]
default = ["dep:strum", "dep:strum_macros", "dep:clap"]

[lib]
name = "bench_common"
path = "src/lib.rs"

[[bin]]         
name = "bench" 
path = "src/main.rs"
