[package]
name = "slice_search"
version = "0.1.2"
edition = "2021"
description = "A collection of algorithms for searching within slices."
authors = ["Lev Kruglyak <lev.kruglyak2014@gmail.com>"]
keywords = ["search", "binary-search", "linear-search", "slice", "no_std"]
license = "Apache-2.0"
repository = "https://github.com/LevKruglyak/limousine"

[dependencies]
